syntax = "proto3";

package user.events;
option java_multiple_files=true;

message UserEvent {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string event_type = 5;
}